--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+src/com/cc/code/build/Build.java
+*.class
+bin/com/cc/code/build/Build.class
