--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ bin/com/cc/code/build/Build.class
 *.class
 bin/com/cc/code/table/Table.class
 src/com/cc/code/build/Build.java
+src/com/cc/code/build/Build.java
